--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.22.0",
     "express": "^4.18.3",
+    "mongoose": "^8.12.2",
     "prisma": "^5.10.2"
   },
   "devDependencies": {
-    "typescript": "^5.4.2",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "typescript": "^5.4.2"
   }
 }
